--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,7 @@
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
         <exec.mainClass>org.centrale.medev.tp_dariel_hugo.TP_Dariel_Hugo</exec.mainClass>
+        <sonar.organization>ecn-info-medev</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 </project>
